insert swagger
